[package]
name = "evn_engine"
version = "0.1.0"
authors = ["Friz64 <friz64mc@gmail.com>"]
edition = "2018"

[dependencies]
serde_yaml = "0.8"
err-derive = "0.1"
specs = "0.14"
specs-derive = "0.4.0"
clap = "2.32"
chrono = "0.4"
ansi_term = "0.11"
log = { version = "0.4", features = ["std"] }
hashbrown = "0.1"
ash = "0.27"
winit = "0.18"
rayon = "1.0"
nalgebra = "0.16"
nalgebra-glm = "0.2.1"
crossbeam = "0.7.1"
